--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -83,6 +83,7 @@ jobs:
           PLAN: "terraform\n${{steps.plan.outputs.stdout}}"
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
+        #   , Working Directory: \`${{ env.tf_actions_working_dir }}\`
           script: |
             const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
@@ -95,7 +96,7 @@ jobs:
             
             </details>
             
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Workflow: \`${{ github.workflow }}\`*`; 
               
             github.rest.issues.createComment({
               issue_number: context.issue.number,
