--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,7 @@ env:
   AWS_REGION: us-east-1
   EKS_CLUSTER: vprofile-eks
   TF_VERSION: 1.6.3
+  WORKING_DIRECTORY: terraform
 permissions:
   contents: read
   
@@ -29,7 +30,7 @@ jobs:
         id: checkov
         uses: bridgecrewio/checkov-action@master
         with:
-          directory: ./terraform
+          directory: ${{env.WORKING_DIRECTORY}}
           soft_fail: true
           
 
@@ -42,7 +43,8 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./terraform
+        working-directory: ${{env.WORKING_DIRECTORY}}
+
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
@@ -68,7 +70,9 @@ jobs:
             # Generates an execution plan for Terraform
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color -input=false -out plan.out
+        # -input=false -out plan.out
+        if: github.event_name == 'pull-request'
+        run: terraform plan -no-color 
         continue-on-error: true
 
       - name: Terraform plan status
@@ -78,7 +82,7 @@ jobs:
       - name: Add terraform plan comment
         id: comment
         uses: actions/github-script@v6
-        if: github.event_name == 'push'
+        if: github.event_name == 'pull-request'
         env:
           PLAN: "terraform\n${{steps.plan.outputs.stdout}}"
         with:
