--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Terraform Plan
         id: plan
         # -input=false -out plan.out
-        if: github.event_name == 'pull-request'
+        if: github.event_name == 'pull_request'
         run: terraform plan -no-color 
         continue-on-error: true
 
@@ -82,7 +82,7 @@ jobs:
       - name: Add terraform plan comment
         id: comment
         uses: actions/github-script@v6
-        if: github.event_name == 'pull-request'
+        if: github.event_name == 'pull_request'
         env:
           PLAN: "terraform\n${{steps.plan.outputs.stdout}}"
         with:
@@ -112,7 +112,8 @@ jobs:
       - name: Terraform apply
         id: appl
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false -parallelism=1 plan.out
+        run: terraform apply -auto-approve 
+        # -input=false -parallelism=1 plan.out
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
