--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -15,7 +15,9 @@ env:
   TF_VERSION: 1.6.3
   WORKING_DIRECTORY: terraform
 permissions:
-  contents: read
+    issues: write
+    contents: read
+    pull-requests: write
   
 jobs:
   scan-terraform-config:
