--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -67,7 +67,7 @@ jobs:
 
       - name: Terraform validate
         id: validate
-        run: terraform validate
+        run: terraform validate -no-color
 
             # Generates an execution plan for Terraform
       - name: Terraform Plan
@@ -91,8 +91,8 @@ jobs:
           github-token: ${{secrets.GITHUB_TOKEN}}
         #   , Working Directory: \`${{ env.tf_actions_working_dir }}\`
           script: |
-            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            const output = `#### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\` 
+            #### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Validation 🤖${{ steps.validate.outputs.stdout }}
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
         
