show checkov result on the windows

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,7 +35,9 @@ jobs:
           directory: ${{env.WORKING_DIRECTORY}}
           soft_fail: true
           
-
+    outputs:
+      checkov_report: ${{ steps.checkov.outputs.results }}
+    
 
   deploy-infra-terraform:
     name: "Apply terraform code changes"
